--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,33 +3,38 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />    
   <title>User Registry</title>
-  <link rel="stylesheet" href="/public/css/jass.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <title>User Registry</title>
+  <link rel="stylesheet" href="/styles/style.css">
+ 
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      User Registry
-    </h1>
-    {{#if logged_in}}
-    <nav>
-      <button class="btn" id="logout">logout</button>
-    </nav>
-    {{/if}}
-  </header>
-  <main class="container container-fluid mt-5">
-   <h2>Latest Blog Posts</h2>
-      {{{ body }}}
-  </main>
-  <footer>
-      
-  </footer>
 
-  {{#if logged_in}}
-  <script src="/public/js/login.js"></script>
-  {{/if}}
+    <header>
+        <h1>Tech Blog</h1>
+    </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Dashboard</a>
+        <a href="#">Login</a>
+      
+        
+    </nav>
+ 
+    <main>
+      {{{ body }}}
+     
+    </main>
+
+    <footer>
+        &copy; 2023 Tech Blog. All rights reserved.
+    </footer>
+
 </body>
 
 </html>
