--- a/views/blogedit.handlebars
+++ b/views/blogedit.handlebars
@@ -13,6 +13,6 @@
         <input type="date" id="post-date" name="post-date" value="2023-11-16" required> --}}
          {{!-- <label id="blogId">Blog ID:  {{blogData.id}} </label> --}}
          <input type="text" id="blogId" name="Blog ID" value={{blogData.id}}>
-        <button type="submit" id = "submitBtn">Save Changes</button>
+        <button type="submit" id = "submitBtn">Save Changes</button> <button type="submit" id = "deleteBtn">Delete Blog</button>
 </form>
 <script src="/js/index.js"></script>
