--- a/views/newblog.handlebars
+++ b/views/newblog.handlebars
@@ -6,7 +6,7 @@
         <label >Content:</label>
         <textarea id="postcontent" name="postContent" rows="8" required> </textarea>
 
-        <label for="post-author">Author:<span id = "authName">{{autherName}}</span> </label>
+        <label for="post-author">Author:<span id = "authName">{{authorName}}</span> </label>
         {{!-- <input type="text" id="authname" name="post-author" value = {{autherName}}> --}}
 
         <label for="ID"><span id = "userId">{{userId}}</span></label>
