--- a/views/blogedit.handlebars
+++ b/views/blogedit.handlebars
@@ -1,18 +1,21 @@
-<form>
-        {{!-- {{Log blogData}} --}}
+<form> 
+        {{!-- {{Log blogData}}  --}}
         <label>Title:</label>
-        <input type="text" id="post-title" name="post-title" value={{blogData.title}} required>
+        <input type="text" id="post-title" name="post-title" value={{blogsData.title}} >
 
         <label >Content:</label>
-        <textarea id="post-content" name="post-content" rows="8" required>{{blogData.post}} </textarea>
+        <textarea id="post-content" name="post-content" rows="8" required>{{blogsData.post}} </textarea> 
 
-        {{!-- <label for="post-author">Author:</label>
-        <input type="text" id="post-author" name="post-author" value="John Doe" required>
+        <label for="post-author">Author:</label>
+        <input type="text" id="post-author" name="post-author" value={{blogsData.user.name}}>
 
-        <label for="post-date">Published on:</label>
-        <input type="date" id="post-date" name="post-date" value="2023-11-16" required> --}}
-         {{!-- <label id="blogId">Blog ID:  {{blogData.id}} </label> --}}
-         <input type="text" id="blogId" name="Blog ID" value={{blogData.id}}>
+        {{!-- <label for="post-date">Published on:</label>
+        <input type="date" id="post-date" name="post-date" {{blogsData.blogDate}}> --}}
+         {{!-- <label id="blogId">Blog ID:  {{blogsData.id}} </label> --}}
+         <input type="text" id="blogId" name="Blog ID" value={{blogsData.id}}>
         <button type="submit" id = "submitBtn">Save Changes</button> <button type="submit" id = "deleteBtn">Delete Blog</button>
 </form>
+
+
+  
 <script src="/js/index.js"></script>
