--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,11 +1,4 @@
-{{!-- 
-<div class="blog-post">
- 
-  <h2>{{title}}</h2>
-  <p>{{post}}</p>
-  <p>Author: {{user.name}}</p>
-  <p>Published on: {{blogDate}}</p>
-</div> --}}
+
 {{#if alertMessage}}
   <script>
      alert('{{alertMessage}}');
@@ -15,13 +8,8 @@
   <article>
        <a href="/blogedetails/{{id}}">
           <h2>{{title}}</h2>
-          <p>{{post}}</p>
-          {{!-- <div class="comment"></div> --}}
-           {{!-- {{#each comments}} --}}
-             {{!-- <p>{{comment}}</p> --}}
-           {{!-- {{/each}} --}}
-          {{!-- </div> --}}
-
+          <p class = "pblog">{{post}}</p>
+          
          <div class="auth">
             <span>Author: {{user.name}}</span> |
             <span>Published on: {{blogDate}}</span>
