Fixed error in User and Blog Creation

--- a/views/blogcomment.handlebars
+++ b/views/blogcomment.handlebars
@@ -29,7 +29,7 @@
    <div class="form-group">
     <a href="/accesscomment/{{blogsData.id}}" id = "commentBtn" class="blog-link">Add Comment</a>
     
-    <script src="/public/js/index.js"></script>
+    {{!-- <script src="/public/js/index.js"></script> --}}
   </div>
 
 
