--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />    
-  <title>User Registry</title>
+  <title>Tech Blog</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>User Registry</title>
+  {{!-- <title>User Registry</title> --}}
   <link rel="stylesheet" href="/styles/style.css">
  
 </head>
@@ -52,7 +52,7 @@
     <script src="/js/logout.js"></script>
       
    {{/if}}
-    <script src="/public/js/index.js"></script>
+    {{!-- <script src="/public/js/index.js"></script> --}}
    
 </body>
 
