--- a/views/newblog.handlebars
+++ b/views/newblog.handlebars
@@ -5,9 +5,9 @@
         <label >Content:</label>
         <textarea id="postcontent" name="postContent" rows="8" required> </textarea>
 
-        <label for="post-author">Author:<span id = "authName">{{authorName}}</span> </label>
+        <label >Author:<span id = "authName">{{authorName}}</span> </label>
      
-        <label for="ID"><span id = "userId">{{userId}}</span></label>
+        <label ><span id = "userId">{{userId}}</span></label>
       
         <button type="submit" id = "saveBtn">Save</button> 
 </form>
