--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -2,15 +2,15 @@
 
 <form class="form signup-form">
   <div class="form-group">
-    <label for="Full-Name">Name:</label>
+    <label for="username-signup">Name:</label>
     <input class="form-input" type="text" id="username-signup" />
   </div>
   <div class="form-group">
-    <label for="email-login">email:</label>
+    <label for="email-signup">email:</label>
     <input class="form-input" type="text" id="email-signup" />
   </div>
   <div class="form-group">
-    <label for="password-login">password:</label>
+    <label for="password-signup">password:</label>
     <input class="form-input" type="password" id="password-signup" />
   </div>
   <div class="form-group">
