--- a/views/typecomment.handlebars
+++ b/views/typecomment.handlebars
@@ -1,8 +1,8 @@
 <form class ="comment-form">
   <h3>Add a Comment</h3>
-  <label for="comment-author">Your Name:</label>
+  <label >Your Name:</label>
   <input type="text" class="comment-author" name="comment-author" >
-  <label for="comment-content">Your Comment:</label>
+  <label >Your Comment:</label>
   <textarea class="comment-content" name="comment-content" rows="4"></textarea>
   <button class="commenttBtn" type="submit">Submit Comment</button>
   <p style="display: none;" id="comblogID">{{blogID}}</p>
